2015-07-25  Kyle Agronick  <agronick@gmail.com>

    Save a conversation just by right clicking the screen

2015-07-24  Kyle Agronick  <agronick@gmail.com>

    Added users search box

2015-07-14  Kyle Agronick  <agronick@gmail.com>

    Added settings and color picking
    Bug fixes

2015-07-08  Kyle Agronick  <agronick@gmail.com>

    Added integration with Hastebin
    Better error handling
    Bug fixes

2015-07-06  Kyle Agronick  <agronick@gmail.com>

    Stopped the tabs from becoming small
    Put an icon on the sidebar indicating if the channel/server is open or now
    Right click any tab to change tabs

2015-07-05  Kyle Agronick  <agronick@gmail.com>

    Added the ability to click a user name on the user popover or the chat window
    and have their name fill the main text entry

2015-07-06  Kyle Agronick  <agronick@gmail.com>

    Added the ability to click a user name on the user popover or the chat window
    and have their name fill the main text entry

2015-06-30  Kyle Agronick  <agronick@gmail.com>

    Packaging for inital public beta release