@@ -1,3 +1,7 @@
+2015-08-08  Kyle Agronick  <agronick@gmail.com>
+
+    Press up and down to review previous messages
+
 2015-07-25  Kyle Agronick  <agronick@gmail.com>
 
     Save a conversation just by right clicking the screen
